apigee-istio-demo-orders/config/orders.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders
  labels:
    app: orders
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: orders
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: orders-v1
  labels:
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: orders
        version: v1
    spec:
      containers:
      - name: orders
        image: gcr.io/industrial-balm-193822/orders:v1
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 5000
