apigee-istio-demo-orders/config/orders-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: orders-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: orders
spec:
  hosts:
  - "*"
  gateways:
  - orders-gateway
  http:
  - match:
    - uri:
        exact: /orders
    route:
    - destination:
        host: orders
        port:
          number: 5000
    corsPolicy:
      allowOrigin:
        - https://apigeedemo.net
        - https://acme-demo.net
        - https://cloudidentitydemo.com
        - https://naseerm-a7e01.firebaseapp.com
        - http://localhost:4200
      allowMethods:
        - POST
        - GET
        - OPTIONS
      allowHeaders:
        - Content-Type
        - Authorization
        - Accept
      allowCredentials: true
      maxAge: 24h
